--- a/app/static/index.html
+++ b/app/static/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Image Hosting</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Image Hosting</h1>
@@ -14,7 +17,7 @@
         <li>Быть уверенными, что ваши картинки надежно сохранены.</li>
         <li>Получать удобные прямые ссылки на загруженные изображения.</li>
     </ul>
-    <button onclick="location.href='/upload'">Загрузить</button>
-    <button onclick="location.href='/images'">Посмотреть</button>
+    <button onclick="location.href='/upload'" type="button" class="btn btn-info">Загрузить</button>
+    <button onclick="location.href='/images'" type="button" class="btn btn-info">Посмотреть</button>
 </body>
 </html>
