--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Image Hosting</title>
+    <title>ФотохоСтинг</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Image Hosting</h1>
-    <p>
-        Наш сервис — это не просто хранилище картинок. Это место, где пользователи могут:
-    </p>
-    <ul>
-        <li>Загружать фотки в популярных форматах (.jpg, .png, .gif).</li>
-        <li>Быть уверенными, что ваши картинки надежно сохранены.</li>
-        <li>Получать удобные прямые ссылки на загруженные изображения.</li>
-    </ul>
-    <button onclick="location.href='/upload'" type="button" class="btn btn-info">Загрузить</button>
-    <button onclick="location.href='/images'" type="button" class="btn btn-info">Посмотреть</button>
+<div class="container-md my-5" >
+    <div class="px-4 py-5 my-5 text-center bg-body-tertiary bg-opacity-50 rounded-5">
+        <img class="d-block mx-auto mb-1" src="./sting.jpg" alt="photo" width="300" height="250">
+        <h1 class="display-1 fw-bold text-body-emphasis">ФОТО ХОСТИНГ</h1>
+        <div class="col-lg-6 mx-auto bg-transparent">
+            <p class="mb-4 bg-transparent">Загружайте фото в популярных форматах (.jpg, .jpeg, .png, .gif) и получите удобные прямые ссылки</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button onclick="location.href='/upload'" class="btn btn-outline-primary btn-lg px-4 gap-3">Загрузить</button>
+                <button onclick="location.href='/images'" type="button" class="btn btn-outline-secondary btn-lg px-4">Посмотреть</button>
+            </div>
+        </div>
+  </div>
+</div>
 </body>
 </html>
