--- a/app/static/upload.html
+++ b/app/static/upload.html
@@ -5,15 +5,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Upload</title>
+    <title>Загрузка фото</title>
 </head>
 <body>
 <form method="POST" enctype="multipart/form-data" action="/upload">
-    <input type="file" id="file-upload" name="image" accept=".jpeg,.png,.gif,.jpg">
+    <input type="file" id="file-upload" name="image" accept=".jpeg, .jpg, .gif, .png">
     <label for="file-upload">Выберите файл</label>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="submit" class="btn btn-outline-primary btn-lg px-4 gap-3">Загрузить</button>
-    </div>
+    <button type="submit">Загрузить</button>
 </form>
 </body>
 </html>
