--- a/app/static/images/images.html
+++ b/app/static/images/images.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Ваши фото</title>
 </head>
 <body>
-    <h1 class="mb-1">Ваши фото</h1>
+    <h1 class="mb-1 text-center">Ваши фото</h1>
     <div id="images"></div>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button onclick="location.href='/'" class="btn btn-outline-primary btn-lg px-4 gap-3">На главную</button>
+    </div>
 </body>
 <script src="images.js"></script>
 </html>
